src/objects/RMAv2__c.object
<CustomObject>
    <fields>
        <fullName>rmaOnsitePartHandoverNotes__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsitePartHandoverNotes__c)),
      rmaOverrideOnsitePartHandoverNotes__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsitePartHandoverNotes__c,
         rmaDiskShelfAsset__r.assetOnsitePartHandoverNotes__c)))</formula>
        <label>Onsite Part Handover Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsitePowerSupplySlot__c</fullName>
        <label>Onsite Power Supply Slot</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteSchedulingCode__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(TEXT(rmaOverrideOnsiteSchedulingCode__c))),
      TEXT(rmaOverrideOnsiteSchedulingCode__c),
      IF(ISBLANK(rmaDiskShelfAsset__c),
         TEXT(rmaCaseNumber__r.Asset.assetOnsiteSchedulingCode__c),
         TEXT(rmaDiskShelfAsset__r.assetOnsiteSchedulingCode__c))))</formula>
        <label>Onsite Scheduling Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteSchedulingNotes__c</fullName>
        <formula>IF(NOT(CONTAINS(rmaAssetSla__c, &quot;Onsite&quot;)),
   &quot;&quot;,
   IF(NOT(ISBLANK(rmaOverrideOnsiteSchedulingNotes__c)),
      rmaOverrideOnsiteSchedulingNotes__c,
      IF(ISBLANK(rmaDiskShelfAsset__c),
         rmaCaseNumber__r.Asset.assetOnsiteSchedulingNotes__c,
         rmaDiskShelfAsset__r.assetOnsiteSchedulingNotes__c)))</formula>
        <label>Onsite Scheduling Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteSla__c</fullName>
        <label>Onsite SLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteTechDateTimeArrivalActual__c</fullName>
        <label>Onsite Tech Date/Time Arrival (Actual)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteTechDateTimeArrivalEta__c</fullName>
        <label>Onsite Tech Date/Time Arrival ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteTechDateTimeOrderConfirmed__c</fullName>
        <label>Onsite Tech Date/Time Order Confirmed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteTechDateTimeReleased__c</fullName>
        <label>Onsite Tech Date/Time Released</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteTechName__c</fullName>
        <label>Onsite Tech Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteTechOrderNumber__c</fullName>
        <label>Onsite Tech Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOnsiteTechStatus__c</fullName>
        <label>Onsite Tech Status</label>
        <picklist>
            <controllingField>rmaType__c</controllingField>
            <picklistValues>
                <fullName>DRAFT-10: Waiting to order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-10: Ordered, waiting for confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-20: Order confirmed, waiting for tech assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-30: Tech assigned, waiting for release from site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-10: Released from site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELED-10: Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-10: No onsite for this RMA Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOpenedWithinWarrantyPeriod__c</fullName>
        <formula>IF(ISBLANK(rmaOutgoingShipmentDateTimeOpened__c),
   IF(ISBLANK(rmaDiskShelfAsset__c),
      IF(AND(NOT(ISBLANK(rmaCaseNumber__r.Asset.Ship_Date__c)),
             TODAY() - rmaCaseNumber__r.Asset.Ship_Date__c + 7 &lt;= 365),
         &quot;Yes&quot;,
         &quot;No&quot;),
      IF(AND(NOT(ISBLANK(rmaDiskShelfAsset__r.Ship_Date__c)),
             TODAY() - rmaDiskShelfAsset__r.Ship_Date__c + 7 &lt;= 365),
         &quot;Yes&quot;,
         &quot;No&quot;)),
   IF(ISBLANK(rmaDiskShelfAsset__c),
      IF(AND(NOT(ISBLANK(rmaCaseNumber__r.Asset.Ship_Date__c)),
             DATEVALUE(rmaOutgoingShipmentDateTimeOpened__c) - rmaCaseNumber__r.Asset.Ship_Date__c + 7 &lt;= 365),
         &quot;Yes&quot;,
         &quot;No&quot;),
      IF(AND(NOT(ISBLANK(rmaDiskShelfAsset__r.Ship_Date__c)),
             DATEVALUE(rmaOutgoingShipmentDateTimeOpened__c) - rmaDiskShelfAsset__r.Ship_Date__c + 7 &lt;= 365),
         &quot;Yes&quot;,
         &quot;No&quot;)))</formula>
        <label>RMA Opened Within Warranty Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOrderConfirmCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Confirm Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rmaOrderConfirmTime__c</fullName>
        <formula>IF( ISBLANK(rmaOutShipDateTimeOrderConfirmed__c) , ((now() - rmaOutgoingShipmentDateTimeOpened__c)*1440) , ((rmaOutShipDateTimeOrderConfirmed__c - rmaOutgoingShipmentDateTimeOpened__c)*1440))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Confirm Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rmaOrderType__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutShipDateTimeDelivered__c</fullName>
        <label>Out. Ship. Date/Time Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOutShipDateTimeEta__c</fullName>
        <label>Out. Ship. Date/Time ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOutShipDateTimeOrderConfirmed__c</fullName>
        <label>Out. Ship. Date/Time Order Confirmed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOutShipDateTimeShipped__c</fullName>
        <label>Out. Ship. Date/Time Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOutShipProviderOrderNumber__c</fullName>
        <label>Out. Ship. Provider Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutShipSignedForBy__c</fullName>
        <label>Out. Ship. Signed For By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentCarrier__c</fullName>
        <label>Outgoing Shipment Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>Aeronet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expeditors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash Global Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand delivered (no carrier)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mach 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nippon Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (put detail in notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purolator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TopCargo Co., Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamato Global Express Co., Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamato Transport Co., Ltd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentDateDelivered__c</fullName>
        <label>Outgoing Shipment Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentDateEta__c</fullName>
        <label>Outgoing Shipment Date ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentDateShipped__c</fullName>
        <label>Outgoing Shipment Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentDateTimeCanceled__c</fullName>
        <label>Outgoing Shipment Date/Time Canceled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentDateTimeClosed__c</fullName>
        <label>Outgoing Shipment Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentDateTimeOpened__c</fullName>
        <label>Outgoing Shipment Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentDepot__c</fullName>
        <label>Outgoing Shipment Depot</label>
        <picklist>
            <picklistValues>
                <fullName>ACV-003 (Arcata, CA, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADL-001 (Hindmarsh, SA, Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADL-002 (Hindmarsh, SA, Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKL-003 (Manukau, Auckland, New Zealand)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALB-002 (Albany, NY, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-005 (Amsterdam, Netherlands)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANC-002 (Anchorage, AK, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATL-003 (Atlanta, GA, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUS-001 (Austin, TX, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDA-002 (Pembroke, Bermuda)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFL-001 (Bakersfield, CA, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIS-002 (Bismarck, ND, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNE-003 (Brisbane, QLD, Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNE-004 (Capalaba, QUEENSLAND, Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-006 (Boston, MA, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRS-003 (Bristol, England, United Kingdom)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRU-002 (Brucargo, Brucargo, Belgium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTV-001 (Williston, VT, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUF-002 (Cheektowaga, NY, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDG-005 (Paris, France)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEG-002 (Spokane, WA, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA-001 (Chattanooga, TN, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHS-002 (North Charleston, SC, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CID-001 (Cedar Rapids, IA, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPH-003 (Vallensbaek, Vallensbaek, Denmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVG-004 (West Chester, OH, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN-001 (Denver, CO, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFW-001 (Carrollton, TX, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW-001 (Detroit, MI, United States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUB-002 (Dublin, Ireland)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentNotes__c</fullName>
        <label>Outgoing Shipment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentOrder4HrDepotFound__c</fullName>
        <label>Outgoing Shipment Order 4-Hr Depot Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentOrderDepot__c</fullName>
        <label>Outgoing Shipment Order Depot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentOrderProvider__c</fullName>
        <label>Outgoing Shipment Order Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentPartSn__c</fullName>
        <label>Outgoing Shipment Part SN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentStatusShort__c</fullName>
        <formula>IF(BEGINS(TEXT(rmaOutgoingShipmentStatus__c), &quot;DRAFT&quot;), &quot;Draft&quot;,
IF(BEGINS(TEXT(rmaOutgoingShipmentStatus__c), &quot;OPEN&quot;), &quot;Open&quot;,
IF(BEGINS(TEXT(rmaOutgoingShipmentStatus__c), &quot;CLOSED&quot;), &quot;Closed&quot;,
IF(BEGINS(TEXT(rmaOutgoingShipmentStatus__c), &quot;CANCELED&quot;), &quot;Canceled&quot;,
IF(BEGINS(TEXT(rmaOutgoingShipmentStatus__c), &quot;N/A&quot;), &quot;N/A&quot;, &quot;&quot;)))))</formula>
        <label>Outgoing Shipment Status Short</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentStatus__c</fullName>
        <label>Outgoing Shipment Status</label>
        <picklist>
            <controllingField>rmaType__c</controllingField>
            <picklistValues>
                <fullName>DRAFT-10: Waiting to order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-10: Ordered, waiting for confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-20: Order confirmed, waiting for shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-30: Shipped, waiting for delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-10: Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELED-10: Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-10: No part to ship for this RMA Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentTimeDelivered__c</fullName>
        <label>Outgoing Shipment Time Delivered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentTimeEta__c</fullName>
        <label>Outgoing Shipment Time ETA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentTimeShipped__c</fullName>
        <label>Outgoing Shipment Time Shipped</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentTimezoneDelivered__c</fullName>
        <label>Outgoing Shipment Timezone Delivered</label>
        <picklist>
            <picklistValues>
                <fullName>(UTC) GMT - Greenwich Mean Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC) UTC - Coordinated Universal Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC) WET - Western European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) BST - British Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) CET - Central European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) DFT - AIX Central European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) IST - Irish Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WAT - West Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WEDT - Western European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WEST - Western European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CAT - Central Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CEDT - Central European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CEST - Central European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) EET - Eastern European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) IST - Israel Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) SAST - South African Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) AST - Arab Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) AST - Arabic Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EAT - East Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EEDT - Eastern European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EEST - Eastern European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) IDT - Israeli Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) MSK - Moscow Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:30) IRST - Iran Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AMT - Armenia Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AST - Arabian Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AZT - Azerbaijan Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) GET - Georgia Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) GST - Gulf Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) MSD - Moscow Summer Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentTimezoneEta__c</fullName>
        <label>Outgoing Shipment Timezone ETA</label>
        <picklist>
            <picklistValues>
                <fullName>(UTC) GMT - Greenwich Mean Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC) UTC - Coordinated Universal Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC) WET - Western European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) BST - British Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) CET - Central European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) DFT - AIX Central European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) IST - Irish Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WAT - West Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WEDT - Western European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WEST - Western European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CAT - Central Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CEDT - Central European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CEST - Central European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) EET - Eastern European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) IST - Israel Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) SAST - South African Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) AST - Arab Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) AST - Arabic Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EAT - East Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EEDT - Eastern European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EEST - Eastern European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) IDT - Israeli Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) MSK - Moscow Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:30) IRST - Iran Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AMT - Armenia Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AST - Arabian Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AZT - Azerbaijan Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) GET - Georgia Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) GST - Gulf Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) MSD - Moscow Summer Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentTimezoneShipped__c</fullName>
        <label>Outgoing Shipment Timezone Shipped</label>
        <picklist>
            <picklistValues>
                <fullName>(UTC) GMT - Greenwich Mean Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC) UTC - Coordinated Universal Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC) WET - Western European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) BST - British Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) CET - Central European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) DFT - AIX Central European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) IST - Irish Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WAT - West Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WEDT - Western European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) WEST - Western European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CAT - Central Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CEDT - Central European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) CEST - Central European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) EET - Eastern European Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) IST - Israel Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) SAST - South African Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) AST - Arab Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) AST - Arabic Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EAT - East Africa Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EEDT - Eastern European Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) EEST - Eastern European Summer Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) IDT - Israeli Daylight Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) MSK - Moscow Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:30) IRST - Iran Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AMT - Armenia Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AST - Arabian Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) AZT - Azerbaijan Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) GET - Georgia Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) GST - Gulf Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:00) MSD - Moscow Summer Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentTrackingNumber__c</fullName>
        <label>Outgoing Shipment Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOutgoingShipmentTrackingUrl__c</fullName>
        <formula>IF(ISBLANK(rmaOutgoingShipmentTrackingNumber__c), &quot;&quot;,
CASE(rmaOutgoingShipmentCarrier__c,
&quot;Aeronet&quot;, HYPERLINK(&quot;http://www.aeronet.com/corporate/scr/tracking/tracking.aspx?HAWB=&quot;&amp;rmaOutgoingShipmentTrackingNumber__c, &quot;Aeronet tracking info&quot;),
&quot;Crane&quot;, &quot;Manually input tracking number on &quot;&amp;HYPERLINK(&quot;http://www.craneww.com&quot;, &quot;Crane&apos;s website&quot;),
&quot;DHL&quot;, &quot;Manually input tracking number on &quot;&amp;HYPERLINK(&quot;http://www.dhl.com/en/express/tracking.html&quot;, &quot;DHL&apos;s website&quot;),
&quot;Expeditors&quot;, &quot;Manually input tracking number on &quot;&amp;HYPERLINK(&quot;http://www.expeditors.com&quot;, &quot;Expeditors&apos;s website&quot;),
&quot;FedEx&quot;, HYPERLINK(&quot;https://www.fedex.com/fedextrack/?tracknumbers=&quot;&amp;rmaOutgoingShipmentTrackingNumber__c, &quot;FedEx tracking info&quot;),
&quot;JIT&quot;, &quot;Manually input tracking number on &quot;&amp;HYPERLINK(&quot;http://www.jittransportation.com/member_login.aspx&quot;, &quot;JIT&apos;s website&quot;),
&quot;Mach 1&quot;, &quot;Manually input tracking number on &quot;&amp;HYPERLINK(&quot;http://m1globaltrack.com/WebTracker/Login/Login.aspx&quot;, &quot;Mach 1&apos;s website&quot;),
&quot;TNT&quot;, &quot;Manually input tracking number on &quot;&amp;HYPERLINK(&quot;http://www.tnt.com/webtracker/tracker.do?navigation=1&quot;, &quot;TNT&apos;s website&quot;),
&quot;UPS&quot;, &quot;Manually input tracking number on &quot;&amp;HYPERLINK(&quot;http://www.ups.com/WebTracking/track&quot;, &quot;UPS&apos;s website&quot;),
&quot;&quot;))</formula>
        <label>Outgoing Shipment Tracking URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideAssetLocAreaOrGrid__c</fullName>
        <label>Override Asset Location - Area Or Grid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideAssetLocBuilding__c</fullName>
        <label>Override Asset Location - Building</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideAssetLocDatacenter__c</fullName>
        <label>Override Asset Location - Datacenter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideAssetLocFloor__c</fullName>
        <label>Override Asset Location - Floor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideAssetLocPositionInRack__c</fullName>
        <label>Override Asset Loc - Position In Rack</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideAssetLocRack__c</fullName>
        <label>Override Asset Location - Rack</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideAssetLocRow__c</fullName>
        <label>Override Asset Location - Row</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteArrivalCity__c</fullName>
        <label>Override Onsite Arrival City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>